--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "preinstall": "npx only-allow pnpm",
     "format": "biome format --write",
     "test:biome": "biome check",
+    "test:biome_format": "biome format",
     "test:md": "markdownlint *.md",
-    "test": "run-s test:biome test:md"
+    "test": "run-s test:biome test:biome_format test:md"
   },
   "version": "1.0.0",
   "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
